# _tetrika

./: pyproject.toml
task1/: solution.py
task2/: solution.py  task2.md
task3/: solution.py
test/: beasts.csv  test_task1.py  test_task2.py  test_task3.py
