[tool.poetry]
name = "tetrika"
version = "0.1.0"
description = ""
authors = ["EliseyGodX"]
packages = [{ include = "task1" }, { include = "task2" }, { include = "task3" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.0"
requests = "^2.32.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
